--- a/css/ventas.css
+++ b/css/ventas.css
@@ -204,6 +204,6 @@ hr{
 
 /* selectores personalizados para busqueda */
 
-.cantidad, .precio, .subtotal, .total{
+.cantidad, .precio, .subtotal, .TOTAL{
 
 }
